<resources>
    <string name="app_name">Github User</string>
    <string name="user_name">User Name</string>
    <string name="name">Name</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="_12345">12345</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="this_is_follower_fragment">Hello ini followers fragment</string>
    <string name="this_is_following_fragment">Hello ini following fragment</string>
</resources>