<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_num_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/MyTextAppearance.Number"
        app:layout_constraintStart_toStartOf="@+id/tv_follower"
        app:layout_constraintBottom_toTopOf="@+id/tv_follower"
        app:layout_constraintEnd_toEndOf="@+id/tv_follower"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/_num" />
    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        style="@style/MyTextAppearance"
        app:layout_constraintStart_toEndOf="@+id/image_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_following"
        app:layout_constraintBottom_toBottomOf="@id/image_user"
        android:text="@string/followers" />


    <TextView
        android:id="@+id/tv_num_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextAppearance.Number"
        app:layout_constraintStart_toStartOf="@+id/tv_following"
        app:layout_constraintBottom_toBottomOf="@+id/tv_num_follower"
        app:layout_constraintEnd_toEndOf="@+id/tv_following"
        android:text="@string/_num" />
    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextAppearance"
        app:layout_constraintStart_toEndOf="@+id/tv_follower"
        app:layout_constraintTop_toTopOf="@+id/tv_follower"
        app:layout_constraintEnd_toStartOf="@+id/tv_repository"
        android:text="@string/following" />

    <TextView
        android:id="@+id/tv_num_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextAppearance.Number"
        app:layout_constraintStart_toStartOf="@+id/tv_repository"
        app:layout_constraintBottom_toBottomOf="@+id/tv_num_following"
        app:layout_constraintEnd_toEndOf="@+id/tv_repository"
        android:text="@string/_num" />
    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextAppearance"
        app:layout_constraintStart_toEndOf="@+id/tv_following"
        app:layout_constraintTop_toTopOf="@+id/tv_following"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/repository" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/image_user"/>
    <TextView
        android:id="@+id/tv_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_text_location"
        app:layout_constraintTop_toTopOf="@+id/tv_text_location"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/tv_text_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:drawableStartCompat="@drawable/ic_outline_domain_24"/>
    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_text_company"
        app:layout_constraintTop_toTopOf="@+id/tv_text_company"
        android:text="@string/company"/>

</androidx.constraintlayout.widget.ConstraintLayout>